--- a/action.yml
+++ b/action.yml
@@ -5,11 +5,19 @@ inputs:
     description: "service to replace"
     required: false
     default: ""
+  service-image-path:
+    description: "path to service Dockerfile"
+    required: false
+    default: ""
 
 runs:
   using: "composite"
   steps:
     - uses: actions/checkout@v3
+    - name: prepare docker-compose file
+      if: ${{ inputs.service != '' }}
+      shell: bash
+      run: $GITHUB_ACTION_PATH/env/prepare.sh ${{ inputs.service }} ${{ inputs.service-image-path }}
     - uses: actions/setup-node@v3
       with:
         node-version: '18.12'
