--- a/action.yml
+++ b/action.yml
@@ -49,17 +49,17 @@ runs:
       run: |
         cd $GITHUB_ACTION_PATH
         npm ci
-        npm install chromedriver@"${{ env.chrome_version }}" --legacy-peer-deps
+        npm install chromedriver@"${{ env.chrome_version }}"
     - name: test
       shell: bash
       run: |
         cd $GITHUB_ACTION_PATH
         npm start
-    - name: take env down
+    - name: stop env
       shell: bash
       run: |
         cd $GITHUB_ACTION_PATH
-        docker-compose -f ./env/docker-compose.yml down
+        docker-compose -f ./env/docker-compose.yml stop
     - name: copy coverage file
       shell: bash
       run: sudo cp -R $GITHUB_ACTION_PATH/env/.data/vault/coverage .
