--- a/action.yml
+++ b/action.yml
@@ -66,15 +66,15 @@ runs:
         docker-compose -f ./env/docker-compose.yml stop -t 10
     - name: copy coverage file
       shell: bash
-      run: sudo cp -R $GITHUB_ACTION_PATH/env/.data/vault/coverage .
+      run: sudo cp -R $GITHUB_ACTION_PATH/env/.data/${{ inputs.service }}/coverage .
     - name: Collect docker logs
       if: ${{ always() }}
       uses: jwalton/gh-docker-logs@v2
       with:
-        dest: './tests_output/docker-logs'
+        dest: '$GITHUB_ACTION_PATH/tests_output/docker-logs'
     - name: archive logs
       if: ${{ always() }}
       uses: actions/upload-artifact@v3
       with:
         name: e2e-logs
-        path: tests_output
+        path: $GITHUB_ACTION_PATH/tests_output
