--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -73,6 +73,8 @@ services:
     environment:
       POSTGRES_DB: 'vault'
       POSTGRES_PASSWORD: 'password'
+    ports:
+      - '5432:5432'
 
   pwa:
     image: ghcr.io/findy-network/findy-wallet-pwa/local:latest
