--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -69,7 +69,7 @@ services:
   vault-db:
     image: postgres:13.6-alpine
     volumes:
-      - .data/vault:/var/lib/postgresql/data
+      - .data/vault-db:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: 'vault'
       POSTGRES_PASSWORD: 'password'
