Add missing pool name param.

--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       FCLI_POOL_GENESIS_TXN_FILE: ''
       FCLI_POOL_NAME: 'FINDY_FILE_LEDGER'
       FCLI_AGENCY_POOL_NAME: 'FINDY_FILE_LEDGER'
+      FCLI_STEWARD_POOL_NAME: 'FINDY_FILE_LEDGER'
       FCLI_AGENCY_STEWARD_DID: 'Th7MpTaRZVRYnPiabds81Y'
       FCLI_STEWARD_SEED: '000000000000000000000000Steward1'
       FCLI_IMPORT_WALLET_FILE: ""
